--- a/src/assets/styles/components/Categories.scss
+++ b/src/assets/styles/components/Categories.scss
@@ -1,9 +1,8 @@
 .categories__title {
+  width: 100%;
+  margin-bottom: 0;
+  padding-left: 30px;
   background: var(--main-color);
   color: var(--white-color);
-  font-size: 16px;
-  margin-top: -16px;
-  position: absolute;
-  padding-left: 30px;
-  width: 100%;
+  font-size: 20px;
 }
